--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
 
 </head>
 <body>
-<app-root>Loading...</app-root>
+<app-root>
+  <div class="text-center">
+    <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+    <div>Welcome to MTSA!</div>
+</div>
+</app-root>
 </body>
 </html>
